# Trading-Algorithm

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  OPTIMIZATION_GUIDE.md  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark_performance.cpp  benchmark_performance.vcxproj  benchmark_performance.vcxproj.filters  best_strategy.pine  cmake_install.cmake  env.example  evolution_results.csv  fetch_spy_data.py  genetic_evolution.vcxproj  genetic_evolution.vcxproj.filters  gpu_kernels.vcxproj  gpu_kernels.vcxproj.filters  imgui.ini  imgui.vcxproj  imgui.vcxproj.filters  install_python_deps.bat  overnight_training.bat  requirements.txt  setup_env.bat  setup_env.sh  strategy_grid_search.vcxproj  strategy_grid_search.vcxproj.filters  trading_bot.sln  trading_bot.vcxproj  trading_bot.vcxproj.filters  trading_bot_gui.vcxproj  trading_bot_gui.vcxproj.filters  trading_core.vcxproj  trading_core.vcxproj.filters  updater.py
build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  benchmark_performance.vcxproj  benchmark_performance.vcxproj.filters  cmake_install.cmake  genetic_evolution.vcxproj  genetic_evolution.vcxproj.filters  gpu_kernels.vcxproj  gpu_kernels.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  strategy_grid_search.vcxproj  strategy_grid_search.vcxproj.filters  trading_bot.sln  trading_bot.vcxproj  trading_bot.vcxproj.filters  trading_bot_gui.vcxproj  trading_bot_gui.vcxproj.filters  trading_core.vcxproj  trading_core.vcxproj.filters
build-vs/Debug/: imgui.lib
build-vs/gpu_kernels.dir/Debug/gpu_kernels.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build-vs/imgui.dir/Debug/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  imgui.lastbuildstate
build-vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
include/: Backtester.hpp  DataLoader.hpp  FileUtils.hpp  GPUStrategy.hpp  GeneticStrategy.hpp  MovingAverage.hpp  Strategy.hpp
src/: Backtester.cpp  DataLoader.cpp  GPUStrategy.cpp  GeneticStrategy.cpp  GeneticStrategy.cpp.bak  MovingAverage.cpp  Strategy.cpp  TradeLog.cpp  genetic_evolution.cpp  gpu_kernels.cu  gui_main.cpp  main.cpp  strategy_grid_search.cpp
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
